--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,30 @@
   box-sizing: border-box;
 }
 :root {
+  --rounded-5: 5px;
   --rounded-20: 20px;
   --padding-20: 20px;
   --blue-dark: #316cc4;
   --blue-color: #81b2fd;
   --blue-light: #c1d9fe;
+  --modal-bg: #eff4fe;
   --grey: #f3f8ff;
   --white: #fff;
   --pink: #fc9fa0;
   --red: #fae4e4;
+  --dark-grey: #717995;
   --yellow: #c4ac6f;
+  --green: #b8e2dd;
+  --gold: #d8a454;
+  --fs-8: 8px;
+  --fs-10: 10px;
   --fs-12: 12px;
+  --fs-14: 14px;
+  --fs-28: 28px;
+  --fs-18: 18px;
+  --fs-36: 36px;
   --fw-500: 500;
+  --fw-700: 700;
 }
 
 body {
@@ -27,7 +39,24 @@ body {
   border: 1px solid var(--blue-color);
   overflow: hidden;
 }
-
+.text-gold {
+  color: var(--gold);
+}
+.bg-pink{
+  background-color: var(--pink) !important;
+}
+.bg-yellow{
+  background-color: var(--yellow) !important;
+}
+.fs-12 {
+  font-size: var(--fs-12);
+}
+.fs-14 {
+  font-size: var(--fs-14);
+}
+.z-index-10 {
+  z-index: 10;
+}
 .profile {
   width: 40px;
   height: 40px;
@@ -45,11 +74,14 @@ body {
 .navbar-nav .nav-link.show {
   color: var(--blue-color) !important;
 }
+.text-blue {
+  color: var(--blue-color);
+}
 .nav-item .nav-link.active {
   border-bottom: 2px solid var(--blue-color);
 }
 .search-bar {
-  min-width: 300px;
+  min-width: 250px;
   position: relative;
 
   & input {
@@ -83,7 +115,17 @@ body {
 }
 
 .btn-light {
+  color: var(--dark-grey) !important;
+}
+.btn-light-blue {
+  color: var(--blue-color) !important;
+  font-weight: var(--fw-500);
   background-color: var(--white) !important;
+}
+
+.btn-light-sm {
+  background-color: var(--white) !important;
+  color: var(--blue-color) !important;
   font-size: var(--fs-12) !important;
 }
 
@@ -109,8 +151,171 @@ body {
   }
 }
 
-.btn-outline-primary{
+.btn-outline-primary {
   background: var(--blue-light) !important;
   color: var(--blue-dark) !important;
   font-size: var(--fs-12) !important;
+}
+.btn-outline-danger {
+  background: var(--red) !important;
+  &:hover {
+    color: inherit !important;
+  }
+}
+
+.btn-outline-success {
+  background: var(--green) !important;
+  &:hover {
+    color: inherit !important;
+  }
+}
+
+.btn-box-18 {
+  width: 18px;
+  height: 18px;
+}
+.accent-blue {
+  accent-color: var(--blue-color);
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.progress_bar_bookmark {
+  margin: -16px 0 0 -16px;
+  color: var(--blue-color);
+  position: absolute;
+  font-size: var(--fs-28);
+}
+.modal_bookmark {
+  position: absolute;
+  top: 0;
+  right: 80px;
+  font-size: var(--fs-36);
+  color: var(--blue-color);
+}
+
+.modal-content {
+  background-color: var(--modal-bg) !important;
+}
+.btn-share {
+  width: 40px;
+  height: 40px;
+  font-size: var(--fs-28);
+  background-color: var(--white) !important;
+  border-radius: 50% !important;
+  top: 15px;
+  right: 15px;
+  position: absolute;
+}
+/* ___ progress bar ____ */
+
+.progress-container {
+  position: relative;
+  aspect-ratio: 1;
+  width: 100%;
+  height: auto;
+}
+
+.progress-circle {
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.progress-circle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: conic-gradient(var(--blue-color) 80% 0%, transparent 0% 100%);
+  z-index: 1;
+}
+
+.progress-inner-circle {
+  width: 60%;
+  height: 60%;
+  background-color: var(--white);
+  border-radius: 50%;
+  z-index: 2;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1), 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.progress-text {
+  position: absolute;
+  text-align: center;
+  z-index: 3;
+}
+
+.progress-text h5 {
+  margin: 0;
+  font-weight: var(--fw-700);
+}
+.progress-text p {
+  margin: 0;
+  font-weight: var(--fw-500);
+  font-size: var(--fs-10);
+}
+
+/* Custom property to set progress dynamically */
+.progress-circle[data-progress="50"]::before {
+  background: conic-gradient(var(--blue-color) 0% 50%, transparent 50% 100%);
+}
+
+.progress-circle[data-progress="75"]::before {
+  background: conic-gradient(var(--blue-color) 0% 75%, transparent 75% 100%);
+}
+
+.progress-circle[data-progress="100"]::before {
+  background: conic-gradient(var(--blue-color) 0% 100%, transparent 100% 100%);
+}
+
+/* _____ full calender _____ */
+.fc .fc-toolbar-title {
+  font-size: var(--fs-18) !important;
+  color: var(--dark-grey) !important ;
+}
+
+.fc .fc-button-primary{
+  background-color: transparent !important;
+  border-color: transparent;
+  color: var(--blue-dark);
+  box-shadow: none !important;
+}
+
+.fc .fc-button-primary:not(:disabled).fc-button-active, .fc .fc-button-primary:not(:disabled):active 
+  {
+  background-color: var(--blue-color) !important;
+  color: var(--white);
+  border-color:transparent;
+  border-radius: var(--rounded-5);
+}
+ 
+.fc .fc-col-header-cell-cushion{
+  font-size: var(--fs-18);
+  color: var(--dark-grey);
+  text-decoration: none;
+}
+.fc-daygrid-day-number{
+  font-size: var(--fs-14);
+  color: var(--blue-dark);
+  font-weight: var(--fw-500);
+  text-decoration: none;
+}
+
+.fc-daygrid-month-start{
+  color: var(--dark-grey);
+}
+
+.fc-daygrid-day-top:has(.fc-daygrid-month-start) {
+  background-color: var(--blue-light);
+  
 }
